# bors

./: .gitignore  .rustfmt.toml  Cargo.toml  README.md
.github/: release.yml
src/: embed.rs  log.rs  main.rs
src/commands/: all.rs  get.rs  give.rs  mod.rs  ping.rs
src/db/: mod.rs  models.rs  util.rs
src/discord/: embed.rs  mod.rs  util.rs
